--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/wsedgwick/wsedgwickTheme
+BugReports: https://github.com/wsedgwick/wsedgwickTheme/issues
